@@ -19,7 +19,10 @@
 
 package org.elasticsearch.ingest.common;
 
+import org.apache.logging.log4j.LogManager;
+import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.bytes.BytesReference;
+import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.util.CollectionUtils;
 import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
 import org.elasticsearch.common.xcontent.NamedXContentRegistry;
@@ -30,17 +33,17 @@ import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.ingest.AbstractProcessor;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
-import org.elasticsearch.script.DeprecationMap;
+import org.elasticsearch.script.DynamicMap;
 import org.elasticsearch.script.IngestScript;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptException;
 import org.elasticsearch.script.ScriptService;
+import org.elasticsearch.script.ScriptType;
 
 import java.io.InputStream;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
+import java.util.function.Function;
 
 import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationException;
 
@@ -49,31 +52,34 @@ import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationExcept
  */
 public final class ScriptProcessor extends AbstractProcessor {
 
-    private static final Map<String, String> DEPRECATIONS;
-    static {
-        Map<String, String> deprecations = new HashMap<>();
-        deprecations.put(
-                "_type",
-                "[types removal] Looking up doc types [_type] in scripts is deprecated."
-        );
-        DEPRECATIONS = Collections.unmodifiableMap(deprecations);
-    }
+    private static final DeprecationLogger deprecationLogger =
+            new DeprecationLogger(LogManager.getLogger(DynamicMap.class));
+    private static final Map<String, Function<Object, Object>> PARAMS_FUNCTIONS = org.elasticsearch.common.collect.Map.of(
+            "_type", value -> {
+                deprecationLogger.deprecatedAndMaybeLog("script_processor",
+                        "[types removal] Looking up doc types [_type] in scripts is deprecated.");
+                return value;
+            });
 
     public static final String TYPE = "script";
 
     private final Script script;
     private final ScriptService scriptService;
+    private final IngestScript precompiledIngestScript;
 
     /**
      * Processor that evaluates a script with an ingest document in its context
-     *
-     * @param tag The processor's tag.
+     *  @param tag The processor's tag.
+     * @param description The processor's description.
      * @param script The {@link Script} to execute.
+     * @param precompiledIngestScript The {@link Script} precompiled
      * @param scriptService The {@link ScriptService} used to execute the script.
      */
-    ScriptProcessor(String tag, Script script, ScriptService scriptService)  {
-        super(tag);
+    ScriptProcessor(String tag, String description, Script script, @Nullable IngestScript precompiledIngestScript,
+                    ScriptService scriptService) {
+        super(tag, description);
         this.script = script;
+        this.precompiledIngestScript = precompiledIngestScript;
         this.scriptService = scriptService;
     }
 
@@ -84,9 +90,14 @@ public final class ScriptProcessor extends AbstractProcessor {
      */
     @Override
     public IngestDocument execute(IngestDocument document) {
-        IngestScript.Factory factory = scriptService.compile(script, IngestScript.CONTEXT);
-        factory.newInstance(script.getParams()).execute(
-                new DeprecationMap(document.getSourceAndMetadata(), DEPRECATIONS, "script_processor"));
+        final IngestScript ingestScript;
+        if (precompiledIngestScript == null) {
+            IngestScript.Factory factory = scriptService.compile(script, IngestScript.CONTEXT);
+            ingestScript = factory.newInstance(script.getParams());
+        } else {
+            ingestScript = precompiledIngestScript;
+        }
+        ingestScript.execute(new DynamicMap(document.getSourceAndMetadata(), PARAMS_FUNCTIONS));
         CollectionUtils.ensureNoSelfReferences(document.getSourceAndMetadata(), "ingest script");
         return document;
     }
@@ -100,6 +111,10 @@ public final class ScriptProcessor extends AbstractProcessor {
         return script;
     }
 
+    IngestScript getPrecompiledIngestScript() {
+        return precompiledIngestScript;
+    }
+
     public static final class Factory implements Processor.Factory {
         private final ScriptService scriptService;
 
@@ -109,7 +124,7 @@ public final class ScriptProcessor extends AbstractProcessor {
 
         @Override
         public ScriptProcessor create(Map<String, Processor.Factory> registry, String processorTag,
-                                      Map<String, Object> config) throws Exception {
+                                      String description, Map<String, Object> config) throws Exception {
             try (XContentBuilder builder = XContentBuilder.builder(JsonXContent.jsonXContent).map(config);
                  InputStream stream = BytesReference.bytes(builder).streamInput();
                  XContentParser parser = XContentType.JSON.xContent().createParser(NamedXContentRegistry.EMPTY,
@@ -119,13 +134,16 @@ public final class ScriptProcessor extends AbstractProcessor {
                 Arrays.asList("id", "source", "inline", "lang", "params", "options").forEach(config::remove);
 
                 // verify script is able to be compiled before successfully creating processor.
+                IngestScript ingestScript = null;
                 try {
-                    scriptService.compile(script, IngestScript.CONTEXT);
+                    final IngestScript.Factory factory = scriptService.compile(script, IngestScript.CONTEXT);
+                    if (ScriptType.INLINE.equals(script.getType())) {
+                        ingestScript = factory.newInstance(script.getParams());
+                    }
                 } catch (ScriptException e) {
                     throw newConfigurationException(TYPE, processorTag, null, e);
                 }
-
-                return new ScriptProcessor(processorTag, script, scriptService);
+                return new ScriptProcessor(processorTag, description, script, ingestScript, scriptService);
             }
         }
     }
